<!--
  ~ Copyright 2017 (C) CodePlay Studio. All rights reserved.
  ~
  ~ All source code within this app is licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. You may obtain a copy of the
  ~ License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ either express or implied. See the License for the specific language governing permissions
  ~ and limitations under the License.
  -->

<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="splash">Splash</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="down_payment">Down Payment</string>
    <string name="term">Term</string>
    <string name="year">year(s)</string>
    <string name="annual_interest_rate">Annual Interest Rate</string>
    <string name="sys_percent">%</string>
    <string name="monthly_repayment">Month Repayment</string>
    <string name="total_repayment">Total Repayment</string>
    <string name="total_interest">Total Interest</string>
    <string name="average_monthly_interest">Average Monthly Interest</string>
    <string name="sym_double_column"> : </string>
    <string name="default_result">0.00</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="history">History</string>
    <string name="fixed_interest_rate">Interest Type</string>

</resources>
